// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfficeDashboardPageComponent should render one active mission if one active mission is provided 1`] = `
<div
  id="root0"
  ng-version="19.2.9"
>
  <app-dashboard-spacer>
    <div
      class="flex flex-col gap-4"
    >
      <app-summary-item-list>
        <div
          class="flex flex-row flex-wrap gap-5 w-full"
        >
          <!--container-->
        </div>
      </app-summary-item-list>
      <app-grid-section>
        <div
          class="bg-slate-100 p-5 rounded-lg flex flex-col space-y-4"
        >
          <app-grid-section-header>
            <div
              class="flex flex-row justify-between"
            >
              <h3
                class="text-xl font-medium"
              >
                 assigned 
              </h3>
              <a
                class="btn btn-error"
              >
                anchor
              </a>
              <!--container-->
            </div>
          </app-grid-section-header>
          <app-grid
            ng-reflect-vm="[object Object]"
          >
            <div
              class="grid gap-4 col-span-full grid-cols-6"
              ng-reflect-ng-class="grid-cols-6"
            >
              <app-grid-header
                class="grid grid-cols-subgrid col-span-full"
              >
                <div
                  class="xl:grid grid-cols-subgrid col-span-full hidden"
                >
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     i 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     cli 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     field 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     pil 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     area 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     stat 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     act 
                  </h4>
                  <!--container-->
                </div>
              </app-grid-header>
              <app-grid-item-list
                class="grid grid-cols-subgrid col-span-full"
              >
                <div
                  class="grid xl:grid-cols-subgrid grid-cols-1 md:grid-cols-2 col-span-full gap-4"
                >
                  <app-grid-item
                    class="grid grid-cols-subgrid xl:col-span-full"
                  >
                    <div
                      class="xl:grid flex flex-col xl:grid-cols-subgrid xl:col-span-full xl:items-center gap-3 p-4 xl:p-0 rounded-xl shadow xl:shadow-none hover:-translate-y-1 xl:hover:translate-y-0 duration-100"
                    >
                      <app-key-value
                        ng-reflect-label="i"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             i 
                          </p>
                          <!--container-->
                          <p
                            class="font-medium text-blue-800"
                          >
                             1 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="cli"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             cli 
                          </p>
                          <!--container-->
                          <p>
                            client
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="field"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             field 
                          </p>
                          <!--container-->
                          <p>
                             field 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="pil"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             pil 
                          </p>
                          <!--container-->
                          <p>
                             Alex Rodriguez 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <!--container-->
                      <app-key-value
                        ng-reflect-label="area"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             area 
                          </p>
                          <!--container-->
                          <p>
                            10
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <!--container-->
                      <app-key-value
                        ng-reflect-label="stat"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             stat 
                          </p>
                          <!--container-->
                          <app-labeled-badge
                            ng-reflect-color="bg-green-200 text-green-600"
                          >
                            <div
                              class="h-fit py-2 px-4 rounded-full w-fit bg-green-200 text-green-600"
                            >
                               DashboardPage.pending 
                            </div>
                          </app-labeled-badge>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <div
                        class="flex flex-row gap-3"
                      >
                        <a
                          class="text-blue-500"
                          href="/"
                          ng-reflect-ng-class="text-blue-500"
                          ng-reflect-router-link="/"
                        >
                          manageT
                        </a>
                        <a
                          class="text-blue-500"
                          href="/"
                          ng-reflect-ng-class="text-blue-500"
                          ng-reflect-router-link="/"
                        >
                          reassignT
                        </a>
                        <!--container-->
                      </div>
                      <!--container-->
                      <!--container-->
                    </div>
                  </app-grid-item>
                  <!--container-->
                </div>
              </app-grid-item-list>
            </div>
          </app-grid>
        </div>
      </app-grid-section>
      <!--container-->
    </div>
  </app-dashboard-spacer>
  <!--container-->
  <!--container-->
</div>
`;

exports[`OfficeDashboardPageComponent should render one completed mission 1`] = `
<div
  id="root2"
  ng-version="19.2.9"
>
  <app-dashboard-spacer>
    <div
      class="flex flex-col gap-4"
    >
      <app-summary-item-list>
        <div
          class="flex flex-row flex-wrap gap-5 w-full"
        >
          <!--container-->
        </div>
      </app-summary-item-list>
      <app-grid-section>
        <div
          class="bg-slate-100 p-5 rounded-lg flex flex-col space-y-4"
        >
          <app-grid-section-header>
            <div
              class="flex flex-row justify-between"
            >
              <h3
                class="text-xl font-medium"
              >
                 completed 
              </h3>
              <!--container-->
            </div>
          </app-grid-section-header>
          <app-grid
            ng-reflect-vm="[object Object]"
          >
            <div
              class="grid gap-4 col-span-full grid-cols-6"
              ng-reflect-ng-class="grid-cols-6"
            >
              <app-grid-header
                class="grid grid-cols-subgrid col-span-full"
              >
                <div
                  class="xl:grid grid-cols-subgrid col-span-full hidden"
                >
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     i 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     cli 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     field 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     pil 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     ti 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     per 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     act 
                  </h4>
                  <!--container-->
                </div>
              </app-grid-header>
              <app-grid-item-list
                class="grid grid-cols-subgrid col-span-full"
              >
                <div
                  class="grid xl:grid-cols-subgrid grid-cols-1 md:grid-cols-2 col-span-full gap-4"
                >
                  <app-grid-item
                    class="grid grid-cols-subgrid xl:col-span-full"
                  >
                    <div
                      class="xl:grid flex flex-col xl:grid-cols-subgrid xl:col-span-full xl:items-center gap-3 p-4 xl:p-0 rounded-xl shadow xl:shadow-none hover:-translate-y-1 xl:hover:translate-y-0 duration-100"
                    >
                      <app-key-value
                        ng-reflect-label="i"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             i 
                          </p>
                          <!--container-->
                          <p
                            class="font-medium text-blue-800"
                          >
                             5 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="cli"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             cli 
                          </p>
                          <!--container-->
                          <p>
                            client
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="field"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             field 
                          </p>
                          <!--container-->
                          <p>
                             field 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="pil"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             pil 
                          </p>
                          <!--container-->
                          <p>
                             Alex Rodriguez 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <!--container-->
                      <!--container-->
                      <app-key-value
                        ng-reflect-label="ti"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             ti 
                          </p>
                          <!--container-->
                          <time>
                             val 
                          </time>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <app-key-value
                        ng-reflect-label="per"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             per 
                          </p>
                          <!--container-->
                          <app-labeled-badge
                            ng-reflect-color="bg-green-200 text-green-600"
                          >
                            <div
                              class="h-fit py-2 px-4 rounded-full w-fit bg-green-200 text-green-600"
                            >
                               DashboardPage.excellent 
                            </div>
                          </app-labeled-badge>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <a
                        class="text-blue-500"
                        href="/"
                        ng-reflect-ng-class="text-blue-500"
                        ng-reflect-router-link="/"
                      >
                        reportText
                      </a>
                      <!--container-->
                    </div>
                  </app-grid-item>
                  <!--container-->
                </div>
              </app-grid-item-list>
            </div>
          </app-grid>
        </div>
      </app-grid-section>
      <!--container-->
    </div>
  </app-dashboard-spacer>
  <!--container-->
  <!--container-->
</div>
`;

exports[`OfficeDashboardPageComponent should render the summaries 1`] = `
<div
  id="root4"
  ng-version="19.2.9"
>
  <app-dashboard-spacer>
    <div
      class="flex flex-col gap-4"
    >
      <app-summary-item-list>
        <div
          class="flex flex-row flex-wrap gap-5 w-full"
        >
          <app-summary-item>
            <div
              class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
            >
              <span
                class="text-2xl"
              >
                🎮
              </span>
              <div>
                <h4
                  class="text-gray-700 font-medium"
                >
                   DashboardPage.summary.activeMission.title 
                </h4>
                <p
                  class="text-2xl font-semibold tracking-wider text-blue-600"
                  ng-reflect-ng-class="text-blue-600"
                >
                  <!--container-->
                   12 
                  <!--container-->
                </p>
              </div>
            </div>
          </app-summary-item>
          <app-summary-item>
            <div
              class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
            >
              <span
                class="text-2xl"
              >
                👨‍✈️
              </span>
              <div>
                <h4
                  class="text-gray-700 font-medium"
                >
                   DashboardPage.summary.availablePilots.title 
                </h4>
                <p
                  class="text-2xl font-semibold tracking-wider text-green-600"
                  ng-reflect-ng-class="text-green-600"
                >
                  <!--container-->
                   5 
                  <!--container-->
                </p>
              </div>
            </div>
          </app-summary-item>
          <app-summary-item>
            <div
              class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
            >
              <span
                class="text-2xl"
              >
                ⚠️
              </span>
              <div>
                <h4
                  class="text-gray-700 font-medium"
                >
                   DashboardPage.summary.unassigned.title 
                </h4>
                <p
                  class="text-2xl font-semibold tracking-wider text-red-600"
                  ng-reflect-ng-class="text-red-600"
                >
                  <!--container-->
                   3 
                  <!--container-->
                </p>
              </div>
            </div>
          </app-summary-item>
          <app-summary-item>
            <div
              class="bg-slate-100 min-h-28 w-full rounded-lg flex items-center space-x-5 p-5 hover:shadow hover:-translate-y-1 duration-100 h-full"
            >
              <span
                class="text-2xl"
              >
                💼
              </span>
              <div>
                <h4
                  class="text-gray-700 font-medium"
                >
                   DashboardPage.summary.revenue.title 
                </h4>
                <p
                  class="text-2xl font-semibold tracking-wider text-purple-600"
                  ng-reflect-ng-class="text-purple-600"
                >
                   DashboardPage.moneyQuantity 
                  <!--container-->
                  <!--container-->
                </p>
              </div>
            </div>
          </app-summary-item>
          <!--container-->
        </div>
      </app-summary-item-list>
      <!--container-->
    </div>
  </app-dashboard-spacer>
  <!--container-->
  <!--container-->
</div>
`;

exports[`OfficeDashboardPageComponent should render three active missions 1`] = `
<div
  id="root1"
  ng-version="19.2.9"
>
  <app-dashboard-spacer>
    <div
      class="flex flex-col gap-4"
    >
      <app-summary-item-list>
        <div
          class="flex flex-row flex-wrap gap-5 w-full"
        >
          <!--container-->
        </div>
      </app-summary-item-list>
      <app-grid-section>
        <div
          class="bg-slate-100 p-5 rounded-lg flex flex-col space-y-4"
        >
          <app-grid-section-header>
            <div
              class="flex flex-row justify-between"
            >
              <h3
                class="text-xl font-medium"
              >
                 assigned 
              </h3>
              <a
                class="btn btn-error"
              >
                anchor
              </a>
              <!--container-->
            </div>
          </app-grid-section-header>
          <app-grid
            ng-reflect-vm="[object Object]"
          >
            <div
              class="grid gap-4 col-span-full grid-cols-6"
              ng-reflect-ng-class="grid-cols-6"
            >
              <app-grid-header
                class="grid grid-cols-subgrid col-span-full"
              >
                <div
                  class="xl:grid grid-cols-subgrid col-span-full hidden"
                >
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     i 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     cli 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     field 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     pil 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     area 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     stat 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     act 
                  </h4>
                  <!--container-->
                </div>
              </app-grid-header>
              <app-grid-item-list
                class="grid grid-cols-subgrid col-span-full"
              >
                <div
                  class="grid xl:grid-cols-subgrid grid-cols-1 md:grid-cols-2 col-span-full gap-4"
                >
                  <app-grid-item
                    class="grid grid-cols-subgrid xl:col-span-full"
                  >
                    <div
                      class="xl:grid flex flex-col xl:grid-cols-subgrid xl:col-span-full xl:items-center gap-3 p-4 xl:p-0 rounded-xl shadow xl:shadow-none hover:-translate-y-1 xl:hover:translate-y-0 duration-100"
                    >
                      <app-key-value
                        ng-reflect-label="i"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             i 
                          </p>
                          <!--container-->
                          <p
                            class="font-medium text-blue-800"
                          >
                             1 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="cli"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             cli 
                          </p>
                          <!--container-->
                          <p>
                            client
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="field"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             field 
                          </p>
                          <!--container-->
                          <p>
                             field 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="pil"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             pil 
                          </p>
                          <!--container-->
                          <p>
                             Alex Rodriguez 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <!--container-->
                      <app-key-value
                        ng-reflect-label="area"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             area 
                          </p>
                          <!--container-->
                          <p>
                            10
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <!--container-->
                      <app-key-value
                        ng-reflect-label="stat"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             stat 
                          </p>
                          <!--container-->
                          <app-labeled-badge
                            ng-reflect-color="bg-green-200 text-green-600"
                          >
                            <div
                              class="h-fit py-2 px-4 rounded-full w-fit bg-green-200 text-green-600"
                            >
                               DashboardPage.pending 
                            </div>
                          </app-labeled-badge>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <div
                        class="flex flex-row gap-3"
                      >
                        <a
                          class="text-blue-500"
                          href="/"
                          ng-reflect-ng-class="text-blue-500"
                          ng-reflect-router-link="/"
                        >
                          manageT
                        </a>
                        <a
                          class="text-blue-500"
                          href="/"
                          ng-reflect-ng-class="text-blue-500"
                          ng-reflect-router-link="/"
                        >
                          reassignT
                        </a>
                        <!--container-->
                      </div>
                      <!--container-->
                      <!--container-->
                    </div>
                  </app-grid-item>
                  <app-grid-item
                    class="grid grid-cols-subgrid xl:col-span-full"
                  >
                    <div
                      class="xl:grid flex flex-col xl:grid-cols-subgrid xl:col-span-full xl:items-center gap-3 p-4 xl:p-0 rounded-xl shadow xl:shadow-none hover:-translate-y-1 xl:hover:translate-y-0 duration-100"
                    >
                      <app-key-value
                        ng-reflect-label="i"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             i 
                          </p>
                          <!--container-->
                          <p
                            class="font-medium text-blue-800"
                          >
                             2 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="cli"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             cli 
                          </p>
                          <!--container-->
                          <p>
                            client
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="field"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             field 
                          </p>
                          <!--container-->
                          <p>
                             field 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="pil"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             pil 
                          </p>
                          <!--container-->
                          <p>
                             Wayne Rooney 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <!--container-->
                      <app-key-value
                        ng-reflect-label="area"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             area 
                          </p>
                          <!--container-->
                          <p>
                            10
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <!--container-->
                      <app-key-value
                        ng-reflect-label="stat"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             stat 
                          </p>
                          <!--container-->
                          <app-labeled-badge
                            ng-reflect-color="bg-green-200 text-green-600"
                          >
                            <div
                              class="h-fit py-2 px-4 rounded-full w-fit bg-green-200 text-green-600"
                            >
                               DashboardPage.pending 
                            </div>
                          </app-labeled-badge>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <div
                        class="flex flex-row gap-3"
                      >
                        <a
                          class="text-blue-500"
                          href="/"
                          ng-reflect-ng-class="text-blue-500"
                          ng-reflect-router-link="/"
                        >
                          manageT
                        </a>
                        <a
                          class="text-blue-500"
                          href="/"
                          ng-reflect-ng-class="text-blue-500"
                          ng-reflect-router-link="/"
                        >
                          reassignT
                        </a>
                        <!--container-->
                      </div>
                      <!--container-->
                      <!--container-->
                    </div>
                  </app-grid-item>
                  <app-grid-item
                    class="grid grid-cols-subgrid xl:col-span-full"
                  >
                    <div
                      class="xl:grid flex flex-col xl:grid-cols-subgrid xl:col-span-full xl:items-center gap-3 p-4 xl:p-0 rounded-xl shadow xl:shadow-none hover:-translate-y-1 xl:hover:translate-y-0 duration-100"
                    >
                      <app-key-value
                        ng-reflect-label="i"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             i 
                          </p>
                          <!--container-->
                          <p
                            class="font-medium text-blue-800"
                          >
                             3 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="cli"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             cli 
                          </p>
                          <!--container-->
                          <p>
                            client
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="field"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             field 
                          </p>
                          <!--container-->
                          <p>
                             field 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="pil"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             pil 
                          </p>
                          <!--container-->
                          <p>
                             Alex Rodriguez 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <!--container-->
                      <app-key-value
                        ng-reflect-label="area"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             area 
                          </p>
                          <!--container-->
                          <p>
                            10
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <!--container-->
                      <app-key-value
                        ng-reflect-label="stat"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             stat 
                          </p>
                          <!--container-->
                          <app-labeled-badge
                            ng-reflect-color="bg-green-200 text-green-600"
                          >
                            <div
                              class="h-fit py-2 px-4 rounded-full w-fit bg-green-200 text-green-600"
                            >
                               DashboardPage.pending 
                            </div>
                          </app-labeled-badge>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <div
                        class="flex flex-row gap-3"
                      >
                        <a
                          class="text-blue-500"
                          href="/"
                          ng-reflect-ng-class="text-blue-500"
                          ng-reflect-router-link="/"
                        >
                          manageT
                        </a>
                        <a
                          class="text-blue-500"
                          href="/"
                          ng-reflect-ng-class="text-blue-500"
                          ng-reflect-router-link="/"
                        >
                          reassignT
                        </a>
                        <!--container-->
                      </div>
                      <!--container-->
                      <!--container-->
                    </div>
                  </app-grid-item>
                  <!--container-->
                </div>
              </app-grid-item-list>
            </div>
          </app-grid>
        </div>
      </app-grid-section>
      <!--container-->
    </div>
  </app-dashboard-spacer>
  <!--container-->
  <!--container-->
</div>
`;

exports[`OfficeDashboardPageComponent should render three completed missions 1`] = `
<div
  id="root3"
  ng-version="19.2.9"
>
  <app-dashboard-spacer>
    <div
      class="flex flex-col gap-4"
    >
      <app-summary-item-list>
        <div
          class="flex flex-row flex-wrap gap-5 w-full"
        >
          <!--container-->
        </div>
      </app-summary-item-list>
      <app-grid-section>
        <div
          class="bg-slate-100 p-5 rounded-lg flex flex-col space-y-4"
        >
          <app-grid-section-header>
            <div
              class="flex flex-row justify-between"
            >
              <h3
                class="text-xl font-medium"
              >
                 completed 
              </h3>
              <!--container-->
            </div>
          </app-grid-section-header>
          <app-grid
            ng-reflect-vm="[object Object]"
          >
            <div
              class="grid gap-4 col-span-full grid-cols-6"
              ng-reflect-ng-class="grid-cols-6"
            >
              <app-grid-header
                class="grid grid-cols-subgrid col-span-full"
              >
                <div
                  class="xl:grid grid-cols-subgrid col-span-full hidden"
                >
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     i 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     cli 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     field 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     pil 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     ti 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     per 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     act 
                  </h4>
                  <!--container-->
                </div>
              </app-grid-header>
              <app-grid-item-list
                class="grid grid-cols-subgrid col-span-full"
              >
                <div
                  class="grid xl:grid-cols-subgrid grid-cols-1 md:grid-cols-2 col-span-full gap-4"
                >
                  <app-grid-item
                    class="grid grid-cols-subgrid xl:col-span-full"
                  >
                    <div
                      class="xl:grid flex flex-col xl:grid-cols-subgrid xl:col-span-full xl:items-center gap-3 p-4 xl:p-0 rounded-xl shadow xl:shadow-none hover:-translate-y-1 xl:hover:translate-y-0 duration-100"
                    >
                      <app-key-value
                        ng-reflect-label="i"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             i 
                          </p>
                          <!--container-->
                          <p
                            class="font-medium text-blue-800"
                          >
                             5 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="cli"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             cli 
                          </p>
                          <!--container-->
                          <p>
                            client
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="field"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             field 
                          </p>
                          <!--container-->
                          <p>
                             field 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="pil"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             pil 
                          </p>
                          <!--container-->
                          <p>
                             Alex Rodriguez 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <!--container-->
                      <!--container-->
                      <app-key-value
                        ng-reflect-label="ti"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             ti 
                          </p>
                          <!--container-->
                          <time>
                             val 
                          </time>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <app-key-value
                        ng-reflect-label="per"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             per 
                          </p>
                          <!--container-->
                          <app-labeled-badge
                            ng-reflect-color="bg-green-200 text-green-600"
                          >
                            <div
                              class="h-fit py-2 px-4 rounded-full w-fit bg-green-200 text-green-600"
                            >
                               DashboardPage.excellent 
                            </div>
                          </app-labeled-badge>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <a
                        class="text-blue-500"
                        href="/"
                        ng-reflect-ng-class="text-blue-500"
                        ng-reflect-router-link="/"
                      >
                        reportText
                      </a>
                      <!--container-->
                    </div>
                  </app-grid-item>
                  <app-grid-item
                    class="grid grid-cols-subgrid xl:col-span-full"
                  >
                    <div
                      class="xl:grid flex flex-col xl:grid-cols-subgrid xl:col-span-full xl:items-center gap-3 p-4 xl:p-0 rounded-xl shadow xl:shadow-none hover:-translate-y-1 xl:hover:translate-y-0 duration-100"
                    >
                      <app-key-value
                        ng-reflect-label="i"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             i 
                          </p>
                          <!--container-->
                          <p
                            class="font-medium text-blue-800"
                          >
                             6 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="cli"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             cli 
                          </p>
                          <!--container-->
                          <p>
                            client
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="field"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             field 
                          </p>
                          <!--container-->
                          <p>
                             field 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="pil"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             pil 
                          </p>
                          <!--container-->
                          <p>
                             Wayne Rooney 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <!--container-->
                      <!--container-->
                      <app-key-value
                        ng-reflect-label="ti"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             ti 
                          </p>
                          <!--container-->
                          <time>
                             val 
                          </time>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <app-key-value
                        ng-reflect-label="per"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             per 
                          </p>
                          <!--container-->
                          <app-labeled-badge
                            ng-reflect-color="bg-green-200 text-green-600"
                          >
                            <div
                              class="h-fit py-2 px-4 rounded-full w-fit bg-green-200 text-green-600"
                            >
                               DashboardPage.excellent 
                            </div>
                          </app-labeled-badge>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <a
                        class="text-blue-500"
                        href="/"
                        ng-reflect-ng-class="text-blue-500"
                        ng-reflect-router-link="/"
                      >
                        reportText
                      </a>
                      <!--container-->
                    </div>
                  </app-grid-item>
                  <app-grid-item
                    class="grid grid-cols-subgrid xl:col-span-full"
                  >
                    <div
                      class="xl:grid flex flex-col xl:grid-cols-subgrid xl:col-span-full xl:items-center gap-3 p-4 xl:p-0 rounded-xl shadow xl:shadow-none hover:-translate-y-1 xl:hover:translate-y-0 duration-100"
                    >
                      <app-key-value
                        ng-reflect-label="i"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             i 
                          </p>
                          <!--container-->
                          <p
                            class="font-medium text-blue-800"
                          >
                             7 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="cli"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             cli 
                          </p>
                          <!--container-->
                          <p>
                            client
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="field"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             field 
                          </p>
                          <!--container-->
                          <p>
                             field 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value
                        ng-reflect-label="pil"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             pil 
                          </p>
                          <!--container-->
                          <p>
                             Alex Rodriguez 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <!--container-->
                      <!--container-->
                      <app-key-value
                        ng-reflect-label="ti"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             ti 
                          </p>
                          <!--container-->
                          <time>
                             val 
                          </time>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <app-key-value
                        ng-reflect-label="per"
                      >
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             per 
                          </p>
                          <!--container-->
                          <app-labeled-badge
                            ng-reflect-color="bg-green-200 text-green-600"
                          >
                            <div
                              class="h-fit py-2 px-4 rounded-full w-fit bg-green-200 text-green-600"
                            >
                               DashboardPage.excellent 
                            </div>
                          </app-labeled-badge>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <a
                        class="text-blue-500"
                        href="/"
                        ng-reflect-ng-class="text-blue-500"
                        ng-reflect-router-link="/"
                      >
                        reportText
                      </a>
                      <!--container-->
                    </div>
                  </app-grid-item>
                  <!--container-->
                </div>
              </app-grid-item-list>
            </div>
          </app-grid>
        </div>
      </app-grid-section>
      <!--container-->
    </div>
  </app-dashboard-spacer>
  <!--container-->
  <!--container-->
</div>
`;
